<resources>
    <string name="app_name">Favourite Calls</string>
    <string name="e1">1</string>
    <string name="e2">2</string>
    <string name="e3">3</string>
    <string name="e4">4</string>
    <string name="e5">5</string>
    <string name="e6">6</string>
    <string name="e7">7</string>
    <string name="e8">8</string>
    <string name="e9">9</string>
    <string name="e0">0</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">CANCEL</string>
    <string name="edtName">Name</string>
    <string name="txtNum">Number</string>
    <string name="btnDelete">DELETE</string>
    <string name="txtUltimaCab">Last Call</string>
</resources>
